@@ -90,12 +90,55 @@ module ActiveRecord
         end
         
         
-        def columns(table_name_, name_=nil)  #:nodoc:
+        def columns(table_name_, name_=nil)
           table_name_ = table_name_.to_s
           spatial_info_ = spatial_column_info(table_name_)
           column_definitions(table_name_).collect do |name_, type_, default_, notnull_|
             SpatialColumn.new(name_, default_, type_, notnull_ == 'f', type_ =~ /geometry/i ? spatial_info_[name_] : nil)
           end
+        end
+        
+        
+        def indexes(table_name_, name_=nil)
+          
+          # Remove postgis from schemas
+          schemas_ = schema_search_path.split(/,/)
+          schemas_.delete('postgis')
+          schemas_ = schemas_.map{ |p_| quote(p_) }.join(',')
+          
+          # Get index type by joining with pg_am.
+          result_ = query(<<-SQL, name_)
+            SELECT distinct i.relname, d.indisunique, d.indkey, t.oid, am.amname
+              FROM pg_class t, pg_class i, pg_index d, pg_am am
+            WHERE i.relkind = 'i'
+              AND d.indexrelid = i.oid
+              AND d.indisprimary = 'f'
+              AND t.oid = d.indrelid
+              AND t.relname = '#{table_name_}'
+              AND i.relnamespace IN (SELECT oid FROM pg_namespace WHERE nspname IN (#{schemas_}) )
+              AND i.relam = am.oid
+            ORDER BY i.relname
+          SQL
+          
+          result_.map do |row_|
+            index_name_ = row_[0]
+            unique_ = row_[1] == 't'
+            indkey_ = row_[2].split(" ")
+            oid_ = row_[3]
+            indtype_ = row_[4]
+            
+            columns_ = query(<<-SQL, "Columns for index #{row_[0]} on #{table_name_}").inject({}){ |h_, r_| h_[r_[0]] = [r_[1], r_[2]]; h_ }
+              SELECT a.attnum, a.attname, t.typname
+              FROM pg_attribute a, pg_type t
+              WHERE a.attrelid = #{oid_}
+              AND a.attnum IN (#{indkey_.join(",")})
+              AND a.atttypid = t.oid
+            SQL
+            
+            spatial_ = indtype_ == 'gist' && columns_.size == 1 && (columns_.values.first[1] == 'geometry' || columns_.values.first[1] == 'geography')
+            column_names_ = columns_.values_at(*indkey_).compact.map{ |a_| a_[0] }
+            column_names_.empty? ? nil : ::RGeo::ActiveRecord::SpatialIndexDefinition.new(table_name_, index_name_, unique_, column_names_, nil, spatial_)
+          end.compact
         end
         
         
